# addons-server

./: .babelrc  .browserslistrc  .dockerignore  .git-wtfrc  .gitignore  .gitmodules  .jshintrc  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  .pyup.yml  .readthedocs.yml  .taskcluster.yml  .travis.yml  960-drop-no-total-contributions-column.sql  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.deploy  Dockerfile.ecs  Dockerfile.mac-arm  Dockerfile.perftests  Dockerfile.py3.deploy  Dockerfile.python2.deploy  Dockerfile.python3  Dockerfile.python3.deploy  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile-docker  Makefile-os  PULL_REQUEST_TEMPLATE.md  Procfile  README.md  README.rst  STYLE.rst  UPGRADE_STATUS.md  (+79 more)
.circleci/: config.yml
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-template.md  release.yml  stale.yml
amo/: __init__.py
apps/: __init__.py
default/: log_settings.py  settings.py  urls.py
docker/: debian-buster-nodesource-repo  debian-buster-repo  debian-stretch-backports-repo  debian-stretch-nodesource-repo  debian-testing-repo  debian_packages.txt  docker-entrypoint.sh  entrypoint.sh  fix_olympia_user.sh  git.gpg.key  git.repo  healthcheck.mjs  healthcheck.sh  mysql-community.gpg.key  mysql.gpg.asc  mysql.list  mysql.repo  nodesource.list  nodesource.repo  supervisor-celery.conf  supervisor.conf  uwsgi-celery.ini  uwsgi.ini  uwsgi.versioncheck.ini
docs/: Makefile  README.md  README.rst  build-github.zsh  conf.py  getting-started.rst  impala_checklist.txt  index.md  index.rst  installation.rst  watcher.py
jingo/: templatetags.py  views.py
lib/: __init__.py  cef_loggers.py  celeryutils.py  log_settings_base.py  metlog_shim.py  mongoutils.py  safe_signals.py  settings_base.py  urlconf_decorator.py  urls_base.py
locale/: README.md  README.rst  category_translations.json  compile-mo.sh  extract-l10n.sh  extract-po.py  generate_category_po_files.py  keys.pot  omg_new_l10n.sh  stats-po.sh
media/: .htaccess  commbadge  fireplace
migrations/: 08-null-nominationdate.sql  10-fix-collection-count.sql  101-perf-created-idx.sql  103-cascade.sql  104-collections-cascade.sql  105-fileupload-valid.sql  106-add-mozcom-prefix.sql  107-reviews-cascade.sql  108-log-cascade.sql  109-all-cascade.sql  110-addon_collections_cascade.sql  112-log_activity-cascade.sql  114-no-restart.sql  115-discopane-download-source.sql  116-flag-restartless-addons.sql  117-switch-pending-files.sql  120-charity-stats.sql  121-misc-addon-cats.sql  123-die-listed.sql  124-sad-slugs.sql  125-truncate-facebook.sql  127-add-position-to-preview.sql  13-addon-dates.sql  137-view_ed_prelim_q.sql  146-add-paykey.sql  148-hotness.sql  15-users_tags_addons-ids.sql  150-visible-idx.sql  151-add-version-int.sql  153-approvals-cascade.sql  155-drop-triggers.sql  (+381 more)
(+9067 files in other folders)
